--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    
 }
 
 html{
@@ -18,7 +17,7 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 
-/* width */
+width
 ::-webkit-scrollbar {
     width: 4px;
     height: 80px;
@@ -39,3 +38,8 @@ body{
   ::-webkit-scrollbar-thumb:hover {
     background: #626970;
   }
+
+
+
+
+
